--- a/qtClient/creategrouppage.ui
+++ b/qtClient/creategrouppage.ui
@@ -19,6 +19,7 @@
      <property name="font">
       <font>
        <pointsize>18</pointsize>
+       <weight>50</weight>
        <bold>false</bold>
       </font>
      </property>
@@ -41,7 +42,7 @@
        </widget>
       </item>
       <item row="0" column="1">
-       <widget class="QLineEdit" name="lineEdit"/>
+       <widget class="QLineEdit" name="lineEditName"/>
       </item>
       <item row="1" column="0">
        <widget class="QLabel" name="label_3">
@@ -51,17 +52,17 @@
        </widget>
       </item>
       <item row="1" column="1">
-       <widget class="QLineEdit" name="lineEdit_2"/>
+       <widget class="QLineEdit" name="lineEditType"/>
       </item>
       <item row="2" column="0">
        <widget class="QLabel" name="label_4">
         <property name="text">
-         <string>加群是否需要密码</string>
+         <string>Tips</string>
         </property>
        </widget>
       </item>
       <item row="2" column="1">
-       <widget class="QLineEdit" name="lineEdit_3"/>
+       <widget class="QLineEdit" name="lineEditTips"/>
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="label_5">
@@ -71,7 +72,7 @@
        </widget>
       </item>
       <item row="3" column="1">
-       <widget class="QLineEdit" name="lineEdit_4"/>
+       <widget class="QLineEdit" name="lineEditIntro"/>
       </item>
      </layout>
     </widget>
