--- a/qtClient/findfriendpage.ui
+++ b/qtClient/findfriendpage.ui
@@ -19,6 +19,7 @@
      <property name="font">
       <font>
        <pointsize>18</pointsize>
+       <weight>50</weight>
        <bold>false</bold>
       </font>
      </property>
@@ -40,14 +41,14 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QRadioButton" name="radioButton_2">
+       <widget class="QRadioButton" name="friendButton">
         <property name="text">
          <string>查找人</string>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="QRadioButton" name="radioButton">
+       <widget class="QRadioButton" name="groupButton">
         <property name="text">
          <string>查找群</string>
         </property>
