--- a/qtClient/source.qrc
+++ b/qtClient/source.qrc
@@ -7,4 +7,188 @@
         <file>back.jpeg</file>
         <file>icon.jpeg</file>
     </qresource>
+    <qresource prefix="/emoji">
+        <file>default-emojis/0.png</file>
+        <file>default-emojis/1.png</file>
+        <file>default-emojis/2.png</file>
+        <file>default-emojis/3.png</file>
+        <file>default-emojis/4.png</file>
+        <file>default-emojis/5.png</file>
+        <file>default-emojis/6.png</file>
+        <file>default-emojis/7.png</file>
+        <file>default-emojis/8.png</file>
+        <file>default-emojis/9.png</file>
+        <file>default-emojis/10.png</file>
+        <file>default-emojis/11.png</file>
+        <file>default-emojis/12.png</file>
+        <file>default-emojis/13.png</file>
+        <file>default-emojis/14.png</file>
+        <file>default-emojis/15.png</file>
+        <file>default-emojis/16.png</file>
+        <file>default-emojis/18.png</file>
+        <file>default-emojis/19.png</file>
+        <file>default-emojis/20.png</file>
+        <file>default-emojis/21.png</file>
+        <file>default-emojis/22.png</file>
+        <file>default-emojis/23.png</file>
+        <file>default-emojis/24.png</file>
+        <file>default-emojis/25.png</file>
+        <file>default-emojis/26.png</file>
+        <file>default-emojis/27.png</file>
+        <file>default-emojis/28.png</file>
+        <file>default-emojis/29.png</file>
+        <file>default-emojis/30.png</file>
+        <file>default-emojis/31.png</file>
+        <file>default-emojis/32.png</file>
+        <file>default-emojis/33.png</file>
+        <file>default-emojis/34.png</file>
+        <file>default-emojis/35.png</file>
+        <file>default-emojis/36.png</file>
+        <file>default-emojis/37.png</file>
+        <file>default-emojis/38.png</file>
+        <file>default-emojis/39.png</file>
+        <file>default-emojis/41.png</file>
+        <file>default-emojis/42.png</file>
+        <file>default-emojis/43.png</file>
+        <file>default-emojis/46.png</file>
+        <file>default-emojis/49.png</file>
+        <file>default-emojis/53.png</file>
+        <file>default-emojis/56.png</file>
+        <file>default-emojis/59.png</file>
+        <file>default-emojis/60.png</file>
+        <file>default-emojis/63.png</file>
+        <file>default-emojis/64.png</file>
+        <file>default-emojis/66.png</file>
+        <file>default-emojis/67.png</file>
+        <file>default-emojis/74.png</file>
+        <file>default-emojis/75.png</file>
+        <file>default-emojis/76.png</file>
+        <file>default-emojis/77.png</file>
+        <file>default-emojis/78.png</file>
+        <file>default-emojis/79.png</file>
+        <file>default-emojis/85.png</file>
+        <file>default-emojis/86.png</file>
+        <file>default-emojis/89.png</file>
+        <file>default-emojis/96.png</file>
+        <file>default-emojis/97.png</file>
+        <file>default-emojis/98.png</file>
+        <file>default-emojis/99.png</file>
+        <file>default-emojis/100.png</file>
+        <file>default-emojis/101.png</file>
+        <file>default-emojis/102.png</file>
+        <file>default-emojis/103.png</file>
+        <file>default-emojis/104.png</file>
+        <file>default-emojis/105.png</file>
+        <file>default-emojis/106.png</file>
+        <file>default-emojis/107.png</file>
+        <file>default-emojis/108.png</file>
+        <file>default-emojis/109.png</file>
+        <file>default-emojis/110.png</file>
+        <file>default-emojis/111.png</file>
+        <file>default-emojis/112.png</file>
+        <file>default-emojis/114.png</file>
+        <file>default-emojis/116.png</file>
+        <file>default-emojis/118.png</file>
+        <file>default-emojis/119.png</file>
+        <file>default-emojis/120.png</file>
+        <file>default-emojis/121.png</file>
+        <file>default-emojis/123.png</file>
+        <file>default-emojis/124.png</file>
+        <file>default-emojis/125.png</file>
+        <file>default-emojis/129.png</file>
+        <file>default-emojis/137.png</file>
+        <file>default-emojis/144.png</file>
+        <file>default-emojis/146.png</file>
+        <file>default-emojis/147.png</file>
+        <file>default-emojis/169.png</file>
+        <file>default-emojis/171.png</file>
+        <file>default-emojis/172.png</file>
+        <file>default-emojis/173.png</file>
+        <file>default-emojis/174.png</file>
+        <file>default-emojis/175.png</file>
+        <file>default-emojis/176.png</file>
+        <file>default-emojis/177.png</file>
+        <file>default-emojis/178.png</file>
+        <file>default-emojis/179.png</file>
+        <file>default-emojis/181.png</file>
+        <file>default-emojis/182.png</file>
+        <file>default-emojis/183.png</file>
+        <file>default-emojis/185.png</file>
+        <file>default-emojis/187.png</file>
+        <file>default-emojis/201.png</file>
+        <file>default-emojis/212.png</file>
+        <file>default-emojis/262.png</file>
+        <file>default-emojis/263.png</file>
+        <file>default-emojis/264.png</file>
+        <file>default-emojis/265.png</file>
+        <file>default-emojis/266.png</file>
+        <file>default-emojis/267.png</file>
+        <file>default-emojis/268.png</file>
+        <file>default-emojis/269.png</file>
+        <file>default-emojis/270.png</file>
+        <file>default-emojis/271.png</file>
+        <file>default-emojis/272.png</file>
+        <file>default-emojis/273.png</file>
+        <file>default-emojis/277.png</file>
+        <file>default-emojis/281.png</file>
+        <file>default-emojis/282.png</file>
+        <file>default-emojis/283.png</file>
+        <file>default-emojis/284.png</file>
+        <file>default-emojis/285.png</file>
+        <file>default-emojis/286.png</file>
+        <file>default-emojis/287.png</file>
+        <file>default-emojis/289.png</file>
+        <file>default-emojis/293.png</file>
+        <file>default-emojis/294.png</file>
+        <file>default-emojis/295.png</file>
+        <file>default-emojis/297.png</file>
+        <file>default-emojis/298.png</file>
+        <file>default-emojis/299.png</file>
+        <file>default-emojis/300.png</file>
+        <file>default-emojis/302.png</file>
+        <file>default-emojis/303.png</file>
+        <file>default-emojis/305.png</file>
+        <file>default-emojis/306.png</file>
+        <file>default-emojis/307.png</file>
+        <file>default-emojis/311.png</file>
+        <file>default-emojis/312.png</file>
+        <file>default-emojis/314.png</file>
+        <file>default-emojis/317.png</file>
+        <file>default-emojis/318.png</file>
+        <file>default-emojis/319.png</file>
+        <file>default-emojis/320.png</file>
+        <file>default-emojis/323.png</file>
+        <file>default-emojis/324.png</file>
+        <file>default-emojis/325.png</file>
+        <file>default-emojis/326.png</file>
+        <file>default-emojis/332.png</file>
+        <file>default-emojis/333.png</file>
+        <file>default-emojis/334.png</file>
+        <file>default-emojis/336.png</file>
+        <file>default-emojis/337.png</file>
+        <file>default-emojis/338.png</file>
+        <file>default-emojis/339.png</file>
+        <file>default-emojis/341.png</file>
+        <file>default-emojis/342.png</file>
+        <file>default-emojis/343.png</file>
+        <file>default-emojis/344.png</file>
+        <file>default-emojis/345.png</file>
+        <file>default-emojis/346.png</file>
+        <file>default-emojis/347.png</file>
+        <file>default-emojis/349.png</file>
+        <file>default-emojis/350.png</file>
+        <file>default-emojis/351.png</file>
+        <file>default-emojis/352.png</file>
+        <file>default-emojis/353.png</file>
+        <file>default-emojis/354.png</file>
+        <file>default-emojis/355.png</file>
+        <file>default-emojis/356.png</file>
+        <file>default-emojis/357.png</file>
+        <file>default-emojis/358.png</file>
+        <file>default-emojis/359.png</file>
+        <file>default-emojis/392.png</file>
+        <file>default-emojis/393.png</file>
+        <file>default-emojis/394.png</file>
+        <file>default-emojis/395.png</file>
+    </qresource>
 </RCC>
