--- a/qtClient/chatwindow.ui
+++ b/qtClient/chatwindow.ui
@@ -106,7 +106,7 @@
       <item>
        <widget class="QWidget" name="widget_5" native="true">
         <property name="sizePolicy">
-         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+         <sizepolicy hsizetype="Preferred" vsizetype="Minimum">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
