--- a/qtClient/friendpage.ui
+++ b/qtClient/friendpage.ui
@@ -172,8 +172,11 @@
          </property>
          <item>
           <widget class="QTabWidget" name="tabWidget">
+           <property name="layoutDirection">
+            <enum>Qt::LeftToRight</enum>
+           </property>
            <property name="currentIndex">
-            <number>1</number>
+            <number>0</number>
            </property>
            <widget class="QWidget" name="tab">
             <attribute name="title">
@@ -200,7 +203,7 @@
              </item>
             </layout>
            </widget>
-           <widget class="QWidget" name="tab_2">
+           <widget class="QWidget" name="tab">
             <attribute name="title">
              <string>关系</string>
             </attribute>
@@ -235,7 +238,7 @@
                 <enum>QTabWidget::Triangular</enum>
                </property>
                <property name="currentIndex">
-                <number>1</number>
+                <number>0</number>
                </property>
                <property name="elideMode">
                 <enum>Qt::ElideRight</enum>
@@ -347,7 +350,7 @@
          <item>
           <widget class="QToolButton" name="toolButton_4">
            <property name="text">
-            <string>...</string>
+            <string>空间</string>
            </property>
           </widget>
          </item>
