--- a/qtClient/chatwindow.ui
+++ b/qtClient/chatwindow.ui
@@ -16,7 +16,7 @@
   <layout class="QHBoxLayout" name="horizontalLayout_4">
    <item>
     <widget class="QWidget" name="widget_2" native="true">
-     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,20,10">
+     <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,10">
       <property name="spacing">
        <number>0</number>
       </property>
@@ -94,7 +94,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QTextEdit" name="plainTextEdit">
+       <widget class="QListView" name="listView">
         <property name="minimumSize">
          <size>
           <width>0</width>
