--- a/qtClient/findfriendpage.ui
+++ b/qtClient/findfriendpage.ui
@@ -19,7 +19,6 @@
      <property name="font">
       <font>
        <pointsize>18</pointsize>
-       <weight>50</weight>
        <bold>false</bold>
       </font>
      </property>
@@ -61,7 +60,7 @@
     <widget class="QWidget" name="widget" native="true">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <widget class="QLabel" name="label_2">
+       <widget class="QLabel" name="tipLabel">
         <property name="text">
          <string>用户</string>
         </property>
