--- a/qtClient/source.qrc
+++ b/qtClient/source.qrc
@@ -193,5 +193,6 @@
     </qresource>
     <qresource prefix="/">
         <file>PersonCard.qml</file>
+        <file>loginSetting.jpeg</file>
     </qresource>
 </RCC>
